--- a/src/app/components/iconlist/iconlist.component.html
+++ b/src/app/components/iconlist/iconlist.component.html
@@ -19,7 +19,7 @@
     </mat-menu>
 
     <!-- Collaborator icon -->
-    <button id="coll" mat-icon-button matTooltip="Collaborator">
+    <button id="coll" mat-icon-button matTooltip="Collaborator" (click)="openCollaborators()">
       <img id="img" src="../../../assets/image/outline-person_add-24px.svg" />
     </button>
 
